@@ -1,6 +1,7 @@
 ﻿- Add support for cargo and passenger harbors
 - Add support for intercity buses (except for bus-intercity bus hub)
 - Add support for snowplows
+- Relocate conflicting Customize It Extended panel buttons
 - Fix button on cemetaries being partially covered by an invisible background panel
 - Fix park maintenance buildings having the title 'Road maintenance'
 - Add race condition guard if the user opens the panel when holding down the paste or copy keys
